# simple-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  agent.py  llm.py  main.py  prompts.py  types.py
tests/: test_agent_smoke.py  test_prompts.py
tests/e2e/: conftest.py  test_agent_e2e.py
